[package]
name = "actix-identity-jwt"
version = "0.1.0"
authors = ["SaltyAom <aomkirby@mystiar.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.1"
actix-web = "2.0.0"
actix-files = "0.2.2"
actix-identity = "0.2.1"

askama = "0.10.1"

dotenv = "0.15.0"
jsonwebtoken = "7.2.0"

serde = { version = "1.0", features = ["derive"] }